Integrate PlayerStatsService into Pinata commands and enhance tab completion